[package]
name = "json_in_type"
description = "a library for fast json serialization"
version = "0.1.0"
authors = ["ophir <pere.jobs@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://lovasoa.github.io/json_in_type/"
repository = "https://github.com/lovasoa/json_in_type"
readme = "README.md"
categories = ["encoding"]
keywords = ["json", "serialization"]

[lib]
name = "json_in_type"
path = "src/lib.rs"

[[bin]]
name = "json_in_type"
path = "src/bin.rs"

[dependencies]
json_in_type_derive = {path="json_in_type_derive", version="0.1.0"}
ryu-ecmascript = "0.1"
simd = "0.2.3"

[dev-dependencies]
criterion = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bench]]
name = "json_encoding"
harness = false
