[package]
name = "json_in_type_derive"
version = "0.1.1"
authors = ["ophir <pere.jobs@gmail.com>"]
description = "procedural macros for json_in_type"
license-file = "../LICENSE"
homepage = "https://lovasoa.github.io/json_in_type/"
repository = "https://github.com/lovasoa/json_in_type"

[lib]
proc-macro = true

[dependencies]
syn = "0.14.4"
quote = "0.6.3"
